# xdpixelengine

./: CMakeLists.txt  README.md  config.txt
assets/materials/: AdditiveBlend.txt  QuakeModel.txt  Wave.txt  hellpig.txt  platform0.txt  platform1.txt  robot.txt  room0.txt  shadow.txt  shadow_tekka_animated.txt  tekkaman.txt  text.txt  weapon.txt  white.txt
assets/materials/skybox/: right.txt
assets/models/: hellpig.abm  male.abm  tekka.abm  tekka1.abm  weapon.abm
assets/prefabs/: FpsText.txt  FullScreenQuad.txt  Hellpig_Animated.txt  HorizontalPlatform.txt  Man.txt  OrthogonalCamera.txt  PerspectiveCamera.txt  QuakeModel_Animated.txt  RenderTest.txt  RenderTestTitleText.txt  Robot.txt  Sphere.txt  TekkaMan.txt  TekkaMan_Animated.txt  VerticalPlatform.txt  Wave.txt  Weapon_Animated.txt  credits.txt  room0.txt  room2.txt  xdPixelText.txt
assets/prefabs/Blending/: Add.txt
assets/prefabs/Loading/: OrthogonalCamera.txt  loading.txt
assets/prefabs/skybox/: skyright.txt
assets/scenes/: AdditiveBlending.txt  Hellpig_animation.txt  Quake_animation.txt  Tekkaman_animation.txt  characters.txt  loading.txt  main.txt  quad.txt  rendertest.txt  rotate.txt  rotate2.txt  wave.txt
assets/scenes/backup/: level1.txt  rendertest.txt
assets/scripts/: main.lua
assets/scripts/includes/: inc.lua
assets/shaders/: BlendTextures.fx  BlendTextures_1.fx  Wave.fx  anycolor.fx  outline.fx  planeprojector.fx  planeprojector_original.fx  quad.fx  samplecgfx.fx  simplefx.cg  test.cg  toon _with_depth.fx  toon.fx  toon_original.fx
code/core/: BaseObject.h  Camera.cpp  Camera.h  Engine.cpp  Engine.h  EngineMain.cpp  GameObject.cpp  GameObject.h  GameObjectComponent.cpp  GameObjectComponent.h  Transform.cpp  Transform.h  main.cpp  platform.h
code/core/GameObjectComponents/: RenderComponent.h
code/core/config/: EngineConfig.cpp  EngineConfig.h
code/core/input/: Input.cpp  Input.h  Keycode.h
code/core/math/: MathHelper.cpp  MathHelper.h  Matrix4x4.cpp  Matrix4x4.h  Quaternion.cpp  Quaternion.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
code/core/mesh/: Mesh.cpp  Mesh.h
code/core/time/: Time.cpp  Time.h
code/game/: AutoRotateComponent.cpp  AutoRotateComponent.h  FPCameraControllerComponent.cpp  FPCameraControllerComponent.h  FPSTextComponent.cpp  FPSTextComponent.h  FullScreenQuadComponent.cpp  FullScreenQuadComponent.h  GameMain.cpp  GameMain.h  MaterialComponent.cpp  MaterialComponent.h  MeshComponent.cpp  MeshComponent.h  MoverComponent.cpp  MoverComponent.h  ObjLoaderTestComponent.cpp  ObjLoaderTestComponent.h  PlaneShadowComponent.cpp  PlaneShadowComponent.h  RenderTestComponent.cpp  RenderTestComponent.h  TextComponent.cpp  TextComponent.h  TriangleComponent.cpp  TriangleComponent.h
code/renderer/: BitmapText.h  Color.cpp  Color.h  Material.cpp  Material.h  PlatformRenderer.cpp  PlatformRenderer.h  RenderEngine.cpp  RenderEngine.h  RendererConfig.h
code/renderer/dx9/: DX9Renderer.cpp  DX9Renderer.h
code/renderer/opengl/: OpenGLRenderer.cpp  OpenGLRenderer.h
code/renderer/ps2/: PS2Renderer.cpp  PS2Renderer.h
code/renderer/shaders/: ShaderPass.cpp  ShaderPass.h  ShaderProgram.cpp  ShaderProgram.h  ShaderTechnique.cpp  ShaderTechnique.h
projects/osx/: xdpixelengine-Info.plist  xdpixelengine-Prefix.pch
projects/osx/xdpixelengine.xcodeproj/: project.pbxproj
projects/ps2/: Makefile  Makefile.eeglobal  Makefile_global
projects/win32/: UpgradeLog.XML  UpgradeLog.htm  xdpixelengine.sln  xdpixelengine.vcproj  xdpixelengine.vcxproj  xdpixelengine.vcxproj.filters
src/core/: Camera.cpp  Camera.h  Engine.cpp  Engine.h  GameObject.cpp  GameObject.h  GameObject.h.bak  GameObjectComponent.cpp  GameObjectComponent.h  Transform.cpp  Transform.h  Transform.h.bak  main.cpp  main.m
src/core/config/: EngineConfig.cpp  EngineConfig.h
src/core/input/: Input.cpp  Input.h  Input.h.bak
src/core/math/: MathHelper.cpp  Matrix4x4.cpp  Matrix4x4.cpp.bak  Matrix4x4.h  Vector3.cpp  Vector3.h  Vector3.h.bak  Vector4.h
src/core/mesh/: Mesh.cpp  Mesh.h  Mesh.h.bak
src/core/time/: Time.cpp  Time.h
src/game/: AbmComponent.cpp  AbmComponent.h  AutoRotateComponent.cpp  AutoRotateComponent.h  FPCameraControllerComponent.cpp  FPCameraControllerComponent.h  FPSTextComponent.cpp  FPSTextComponent.h  FullScreenQuadComponent.cpp  FullScreenQuadComponent.h  GameMain.cpp  GameMain.h  MaterialComponent.cpp  MaterialComponent.h  MeshComponent.cpp  MeshComponent.h  MoverComponent.cpp  MoverComponent.h  ObjLoaderTestComponent.cpp  ObjLoaderTestComponent.h  PlaneShadowComponent.cpp  PlaneShadowComponent.h  RenderTestComponent.cpp  RenderTestComponent.h  TextComponent.cpp  TextComponent.h  TriangleComponent.cpp  TriangleComponent.h
src/graphics/: BitmapText.cpp  Color.h  DebugGfx.cpp  DebugGfx.h  Material.cpp  Material.h  RenderEngine.cpp  RenderEngine.h  RendererConfig.h
src/graphics/shaders/: ShaderPass.cpp  ShaderPass.h  ShaderProgram.cpp  ShaderProgram.h  ShaderProgram.h.bak  ShaderTechnique.cpp  ShaderTechnique.h
src/renderer/: DebugGfx.cpp  DebugGfx.h  Material.cpp  Material.h.bak  PlatformRenderer.cpp  PlatformRenderer.cpp.bak  PlatformRenderer.h  PlatformRenderer.h.bak  RenderEngine.cpp
src/renderer/dx9/: DX9Renderer.cpp  DX9Renderer.h
src/renderer/opengl/: OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLRenderer.h.bak
src/renderer/shaders/: ShaderPass.cpp  ShaderProgram.cpp  ShaderProgram.h  ShaderTechnique.cpp  ShaderTechnique.h
tools/maya/obj_exporter/: ObjExporter.mel
tools/md2modelexporterapp/: Md2ModelExporterApp.sln
tools/md2modelexporterapp/Md2ModelExporterApp/: Exporter.cs  MD2ClipConfig.cs  MD2Config.cs  MD2ModelInfo.cs  MD2ModelParser.cs  Md2ModelExporterApp.csproj  Program.cs
tools/md2modelexporterapp/sandbox/: hellpig.txt  male.txt  tekkaman.txt  weapon.txt
tools/python/: lst.py
tools/unity/Tools/: Assembly-CSharp-Editor-vs.csproj  Assembly-CSharp-Editor.csproj  Tools-csharp.sln  Tools.sln
workingassets/maya/blendshapes1/: animation.dae  animation.ma  left.fbx  left.ma  origin.ma  up.ma
workingassets/maya/flatroom/: flatroom.fbx  flatroom.ma
(+86 files in other folders)
